feat(letters): implement the letters module! (#1)
* feat(letter): add letter basic scaffold

* feat(letter): nice letter base

* feat(letter): final base of letter

* feat(letters): make base letters page

* feat(letters): fix spacing in letters

* feat(letters): fix letter spacing

* feat(letters): 25 birthday

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,9 @@
 @import 'tailwindcss';
 
-@theme {
-	--font-sans: 'Courier New', 'sans-serif';
+@utility no-scrollbar {
+	@apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
 }
+
+/* @theme { */
+/* 	--font-sans: 'Courier New', 'sans-serif'; */
+/* } */
