--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,9 @@
 @import 'tailwindcss';
 
 @utility no-scrollbar {
-	@apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
+    @apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
 }
 
-/* @theme { */
-/* 	--font-sans: 'Courier New', 'sans-serif'; */
-/* } */
+@theme {
+    --font-sans: 'Courier New', 'sans-serif';
+}
